<resources>
    <string name="app_name">Subtytle</string>
    <string name="loading">Loading…</string>
    <string name="tab_hot">TOP10</string>
    <string name="tab_local">LOCAL</string>
    <string name="hot_init_text">Pull to start</string>
    <string name="content_description_movie_poster">Movie Poster</string>
    <string name="imdb_icon">IMDb icon</string>
    <string name="tomato_icon">Tomato icon</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_setting">Setting</string>
    <string name="pref_sub_search_languages">Subtitle search languages</string>
    <string name="title_settings">Settings</string>
    <string name="test">Test</string>

    <string name="language_ar">Arabic</string>
    <string name="language_bg">Bulgarian</string>
    <string name="language_bs">Bosnian</string>
    <string name="language_cr">Croatian</string>
    <string name="language_cs">Czech</string>
    <string name="language_da">Danish</string>
    <string name="language_de">German</string>
    <string name="language_en">English</string>
    <string name="language_es">Spanish</string>
    <string name="language_et">Estonian</string>
    <string name="language_fa">Persian</string>
    <string name="language_fi">Finnish</string>
    <string name="language_fr">French</string>
    <string name="language_gl">Greek</string>
    <string name="language_he">Hebrew</string>
    <string name="language_hu">Hungarian</string>
    <string name="language_io">Indonesian</string>
    <string name="language_it">Italian</string>
    <string name="language_lt">Lithuanian</string>
    <string name="language_lv">Latvian</string>
    <string name="language_nl">Dutch</string>
    <string name="language_no">Norwegian</string>
    <string name="language_pb">Brazilian</string>
    <string name="language_pt">Portuguese</string>
    <string name="language_rm">Romanian</string>
    <string name="language_ru">Russian</string>
    <string name="language_se">Polish</string>
    <string name="language_sl">Slovenian</string>
    <string name="language_sq">Albanian</string>
    <string name="language_sr">Serbian</string>
    <string name="language_sv">Swedish</string>
    <string name="language_tr">Turkish</string>
    <string name="language_vi">Vietnamese</string>
    <string name="language_zh">Chinese (simplified)</string>

    <string name="iso639_2_ar">ara</string>
    <string name="iso639_2_bg">bul</string>
    <string name="iso639_2_bs">bos</string>
    <string name="iso639_2_cr">cre</string>
    <string name="iso639_2_cs">cze</string>
    <string name="iso639_2_da">dan</string>
    <string name="iso639_2_de">ger</string>
    <string name="iso639_2_en">eng</string>
    <string name="iso639_2_es">spa</string>
    <string name="iso639_2_et">est</string>
    <string name="iso639_2_fa">per</string>
    <string name="iso639_2_fi">fin</string>
    <string name="iso639_2_fr">fre</string>
    <string name="iso639_2_gl">glg</string>
    <string name="iso639_2_he">heb</string>
    <string name="iso639_2_hu">hun</string>
    <string name="iso639_2_io">ido</string>
    <string name="iso639_2_it">ita</string>
    <string name="iso639_2_lt">lit</string>
    <string name="iso639_2_lv">lav</string>
    <string name="iso639_2_nl">dut</string>
    <string name="iso639_2_no">nor</string>
    <string name="iso639_2_pb">pob</string>
    <string name="iso639_2_pt">por</string>
    <string name="iso639_2_rm">roh</string>
    <string name="iso639_2_ru">rus</string>
    <string name="iso639_2_se">sme</string>
    <string name="iso639_2_sl">slv</string>
    <string name="iso639_2_sq">alb</string>
    <string name="iso639_2_sr">scc</string>
    <string name="iso639_2_sv">swe</string>
    <string name="iso639_2_tr">tur</string>
    <string name="iso639_2_vi">vie</string>
    <string name="iso639_2_zh">chi</string>

    <string name="pref_clear_all">Clear All</string>
    <string name="no_subtitle_found">No subtitle found</string>
    <string name="country_flag">country flag</string>
    <string name="field_label_download_count">Download Count:</string>
    <string name="title_icon">Title Icon</string>
    <string name="language_icon">language icon</string>
    <string name="file_size_icon">file size icon</string>
    <string name="duration_icon">duration icon</string>
    <string name="download_count_icon">download count icon</string>
    <string name="add_date_icon">add date icon</string>
    <string name="weekend_box_office">Weekend Box Office: %s</string>
    <string name="menu_search">Search</string>
    <string name="search_hint">Search movie title</string>
    <string name="close_search">Close Search</string>
    <string name="submit_search">submit search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="previous_button">previous button</string>
    <string name="next_button">next button</string>
    <string name="stop_button">stop button</string>
    <string name="processing">Processing…</string>
    <string name="play_pause_button">play or pause button</string>
    <string name="resume_button">resume button</string>
    <string name="subtitle_data_from">Subtitle data from opensubtitles.org</string>
    <string name="delete">Delete</string>
    <string name="player_sync_button">sync button</string>
    <string name="pref_storage">Storage</string>
    <string name="pref_storage_summary">%1$d %2$s (%3$s)</string>
    <string name="pref_storage_clear_confirm">Delete all subtitles?</string>
    <string name="subtitle">subtitle</string>
    <string name="subtitles">subtitles</string>
    <string name="pref_storage_cleared">No local subtitle.</string>
    <string name="pref_storage_empty">All subtitle removed.</string>

    <string name="response_hot_movie_not_found">Cannot find anything… Try search something.</string>
    <string name="response_hot_movie_failure">Error occurred…</string>
    <string name="retry_button_text">Retry?</string>
    <string name="empty_local_movie">Movies with downloaded subtitle will be shown here</string>
    <string name="player_movie_ended">Movie has ended.</string>
</resources>
