<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/close_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/close_search"
        android:src="@drawable/ic_close_black_24dp" />

    <ImageView
        android:id="@+id/submit_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/submit_search"
        android:src="@drawable/ic_arrow_forward_black_24dp" />

    <EditText
        android:id="@+id/search_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/submit_search"
        android:layout_toStartOf="@id/submit_search"
        android:layout_toRightOf="@id/close_search"
        android:layout_toEndOf="@id/close_search"
        android:hint="@string/search_hint" />

</RelativeLayout>