<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:padding="@dimen/player_padding"
    android:clickable="true"
    tools:background="@android:color/black"
    tools:context=".player.PlayerOverlayFragment">

    <LinearLayout
        android:id="@+id/control_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="48dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/previous_sub_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/previous_button"
            android:padding="@dimen/player_overlay_button_padding"
            android:src="@drawable/ic_skip_previous_white_24dp" />

        <ImageButton
            android:id="@+id/stop_player_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/stop_button"
            android:padding="@dimen/player_overlay_button_padding"
            android:src="@drawable/ic_stop_white_24dp" />

        <ImageButton
            android:id="@+id/next_sub_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/next_button"
            android:padding="@dimen/player_overlay_button_padding"
            android:src="@drawable/ic_skip_next_white_24dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="48dp"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        tools:text="1:17:34/1:36:36"/>

</FrameLayout>
