<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="90dp">

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/movie_poster"
        android:layout_width="60dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="8dp"
        android:contentDescription="@string/content_description_movie_poster"
        android:src="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toRightOf="@id/movie_poster"
        android:gravity="center_vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="24dp"
        android:paddingTop="8dp"
        android:textSize="18sp"
        tools:text="Star War 12345" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_title"
        android:layout_toRightOf="@id/movie_poster"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="24dp"
        android:paddingTop="@dimen/card_text_padding">

        <ImageView
            android:layout_width="@dimen/card_icon_dimen"
            android:layout_height="@dimen/card_icon_dimen"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/imdb_icon"
            android:src="@drawable/ic_imdb" />

        <TextView
            android:id="@+id/imdb_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/card_rating_padding"
            tools:text="6.4/10" />

        <ImageView
            android:layout_width="@dimen/card_icon_dimen"
            android:layout_height="@dimen/card_icon_dimen"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/card_rating_spacing"
            android:contentDescription="@string/tomato_icon"
            android:src="@drawable/ic_tomato" />

        <TextView
            android:id="@+id/tomato_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/card_rating_padding"
            tools:text="7.5/10" />
    </LinearLayout>
</RelativeLayout>