<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sub_file_peek_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sub_detail_peek_height"
            android:layout_gravity="center_vertical"
            android:background="?colorPrimary"
            android:paddingBottom="@dimen/sub_detail_header_padding"
            android:paddingEnd="@dimen/sub_detail_text_left_padding"
            android:paddingLeft="@dimen/sub_detail_header_padding"
            android:paddingRight="@dimen/sub_detail_text_left_padding"
            android:paddingStart="@dimen/sub_detail_header_padding"
            android:paddingTop="@dimen/sub_detail_header_padding"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sub_detail_title_text_size"
            tools:text="Star Wars The Force Awakens 2015 UNMARKED CAM XViD LiNE.srt" />

        <TextView
            android:id="@+id/sub_file_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="?colorPrimary"
            android:paddingBottom="@dimen/sub_detail_header_padding"
            android:paddingEnd="@dimen/sub_detail_text_left_padding"
            android:paddingLeft="@dimen/sub_detail_header_padding"
            android:paddingRight="@dimen/sub_detail_text_left_padding"
            android:paddingStart="@dimen/sub_detail_header_padding"
            android:paddingTop="@dimen/sub_detail_header_padding"
            android:singleLine="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sub_detail_title_text_size"
            android:visibility="gone"
            tools:text="Star Wars The Force Awakens 2015 UNMARKED CAM XViD LiNE.srt" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sub_detail_peek_height">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/language_icon"
            android:paddingLeft="@dimen/sub_detail_icon_left_padding"
            android:src="@drawable/ic_translate_black_24dp" />

        <TextView
            android:id="@+id/sub_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/sub_detail_text_left_padding"
            android:textSize="@dimen/sub_detail_text_size"
            tools:text="English" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sub_detail_item_height">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/file_size_icon"
            android:paddingLeft="@dimen/sub_detail_icon_left_padding"
            android:src="@drawable/ic_insert_drive_file_black_24dp" />

        <TextView
            android:id="@+id/file_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/sub_detail_text_left_padding"
            android:textSize="@dimen/sub_detail_text_size"
            tools:text="70.40 KB" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sub_detail_item_height">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/duration_icon"
            android:paddingLeft="@dimen/sub_detail_icon_left_padding"
            android:src="@drawable/ic_timelapse_black_24dp" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/sub_detail_text_left_padding"
            android:textSize="@dimen/sub_detail_text_size"
            tools:text="01:43:18" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sub_detail_item_height">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/download_count_icon"
            android:paddingLeft="@dimen/sub_detail_icon_left_padding"
            android:src="@drawable/ic_file_download_black_24dp" />

        <TextView
            android:id="@+id/download_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/sub_detail_text_left_padding"
            android:textSize="@dimen/sub_detail_text_size"
            tools:text="75321" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sub_detail_item_height">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/add_date_icon"
            android:paddingLeft="@dimen/sub_detail_icon_left_padding"
            android:src="@drawable/ic_date_range_black_24dp" />

        <TextView
            android:id="@+id/add_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/sub_detail_text_left_padding"
            android:textSize="@dimen/sub_detail_text_size"
            tools:text="2016-03-01 00:35:46" />
    </FrameLayout>

</LinearLayout>