<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    style="@style/MyCardView"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_height"
    card:cardCornerRadius="@dimen/card_corner_radius"
    card:contentPaddingLeft="@dimen/card_content_padding">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/movie_poster"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_description_movie_poster"
            android:cropToPadding="true"
            android:src="@drawable/poster_placeholder"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/movie_poster"
            android:orientation="vertical"
            android:paddingLeft="@dimen/card_text_padding_left"
            android:paddingTop="@dimen/card_text_padding_top">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ranking_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="@dimen/card_title_size"
                    tools:text="1. " />

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="@dimen/card_title_size"
                    tools:ignore="RtlHardcoded"
                    tools:text="Star Wars" />
            </LinearLayout>

            <TextView
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="BoxOffic: $801.37M" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/card_icon_dimen"
                    android:layout_height="@dimen/card_icon_dimen"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/imdb_icon"
                    android:src="@drawable/ic_imdb" />

                <TextView
                    android:id="@+id/imdb_rating"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/card_rating_padding"
                    tools:text="6.4/10" />

                <ImageView
                    android:layout_width="@dimen/card_icon_dimen"
                    android:layout_height="@dimen/card_icon_dimen"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/card_rating_spacing"
                    android:contentDescription="@string/tomato_icon"
                    android:src="@drawable/ic_tomato" />

                <TextView
                    android:id="@+id/tomato_rating"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/card_rating_padding"
                    tools:text="7.5/10" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>